--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.kafka:spring-kafka'
+
+    compileOnly 'org.springframework.boot:spring-boot-starter-amqp'
 
     annotationProcessor 'org.projectlombok:lombok'
 
