--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,6 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'groovy'
 
     sourceCompatibility = 17
 
@@ -37,14 +36,19 @@ subprojects {
 
     dependencies {
         implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+        implementation 'org.projectlombok:lombok'
 
         testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
         testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
 
         annotationProcessor 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
     }
 
     test {
         useJUnitPlatform()
     }
 }
+
+project(':spring-til') {}
+project(':exception') {}
