--- a/spring-til/build.gradle
+++ b/spring-til/build.gradle
@@ -1,36 +1,18 @@
-plugins {
-    id 'org.springframework.boot' version '2.6.11'
-    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
-    id 'java'
-}
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'org.springframework.kafka:spring-kafka'
-
     compileOnly 'org.springframework.boot:spring-boot-starter-amqp'
 
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     runtimeOnly 'mysql:mysql-connector-java'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
-group = 'com.study'
-version = '0.0.1-SNAPSHOT'
+test {
+    exclude '**/*'
+}
+
 description = 'spring-til'
-sourceCompatibility = '11'
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
