--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'til'
 
-include 'spring-til'
+include 'spring_application'
 include 'exception'
 include 'design_pattern'
+include 'message_broker'
 
