message_broker 모듈 분리

--- a/spring_application/build.gradle
+++ b/spring_application/build.gradle
@@ -3,16 +3,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
-    compileOnly 'org.springframework.boot:spring-boot-starter-amqp'
 
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.kafka:spring-kafka'
 
     runtimeOnly 'mysql:mysql-connector-java'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
     exclude '**/*'
 }
 
-description = 'spring-til'
+evaluationDependsOn(':message_broker')
