--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 }
 
 allprojects {
-    group 'com.study'
+    group 'com.study.til'
 }
 
 subprojects {
@@ -38,6 +38,7 @@ subprojects {
         implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
         implementation 'org.projectlombok:lombok'
 
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
         testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
 
@@ -50,6 +51,10 @@ subprojects {
     }
 }
 
-project(':spring_application') {}
-project(':exception') {}
-project(':design_pattern') {}
+project(':spring_application') {
+    dependencies {
+        implementation project(':message_broker')
+    }
+}
+
+project(':message_broker') {}
