--- a/settings.gradle
+++ b/settings.gradle
@@ -5,8 +5,7 @@ include 'exception'
 include 'design_pattern'
 include 'message_broker'
 include 'controller'
-include 'sse_notification'
 include 'event_listener'
 include 'spring_webflux'
-include 'kotlin'
+include 'nexus_libaray'
 
