--- a/spring_application/build.gradle
+++ b/spring_application/build.gradle
@@ -6,11 +6,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-    runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 test {
     exclude '**/*'
 }
-
-evaluationDependsOn(':message_broker')
